@startuml MannschaftHandler

skinparam classAttributeIconSize 0

package jakarta.servlet.http {
    class HttpServletRequest
}

package org.springframework {
    package web.bind.annotation {
        interface "@RestController" as RestController
        interface "@RequestMapping" as RequestMapping
        interface "@PathVariable" as PathVariable
        interface "@RequestParam" as RequestParam
        interface "@ExceptionHandler" as ExceptionHandler
        interface "@ResponseStatus" as ResponseStatus

        RequestMapping .left[hidden].> RestController
    }

    package http {
        class ResponseEntity<T>
    }
    package hateoas {
        class CollectionModel<E>
    }
    package security.core {
        class Authentication
    }
    package util {
        class MultiValueMap<K,V>
    }

    CollectionModel .up[hidden].> Authentication
    ResponseEntity .up[hidden].> CollectionModel
}

package java.util {
    class UUID

    UUID .up[hidden].> HttpServletRequest
}

package com.acme.mannschaft {
    package entity {
        class Mannschaft << entity >>
    }

    package service {
        class MannschaftReadService << control >> << @Service >>
        class NotFoundException

        MannschaftReadService .right[hidden].> NotFoundException
    }

    package rest #DDDDDD {
        class MannschaftModel <<entity>>

        class MannschaftGetController << boundary >> << @RestController >> << @RequestMapping >> {
            + @GetMapping getById(@PathVariable id: UUID, @RequestHeader("If-None-Match") version: String, request: HttpServletRequest, authentication: Authentication): ResponseEntity<MannschaftModel>
            + @GetMapping get(@RequestParam queryParams: MultiValueMap<String, String>, request: HttpServletRequest)
        }

        class CommonExceptionHandler << @ControllerAdvice >> {
            + @ExceptionHandler @ResponseStatus onNotFound(ex: NotFoundException)
            + @ExceptionHandler @ResponseStatus onAccessForbidden(ex: AccessForbiddenException)
        }

        MannschaftGetController o-right-> "1" MannschaftReadService : service
        MannschaftGetController ..> MannschaftModel
        MannschaftGetController ..> Mannschaft

        MannschaftGetController .up.> CollectionModel
        MannschaftGetController .right.> HttpServletRequest
        MannschaftGetController .up.> MultiValueMap
        MannschaftGetController .up.> Authentication
        MannschaftGetController .up.> ResponseEntity

        MannschaftGetController .up.> RestController
        MannschaftGetController .up.> RequestMapping
        MannschaftGetController .up.> PathVariable
        MannschaftGetController .up.> RequestParam

        CommonExceptionHandler .up.> ExceptionHandler
        CommonExceptionHandler .up.> ResponseStatus
        CommonExceptionHandler ..> NotFoundException
        CommonExceptionHandler ..> AccessForbiddenException
        CommonExceptionHandler .up[hidden].> MannschaftModel
        CommonExceptionHandler .[hidden].> Mannschaft

        MannschaftGetController .right.> UUID

        MannschaftModel ..> Mannschaft
        MannschaftModel .[hidden].> MannschaftReadService
    }
}

hide empty members

footer (c) Juergen Zimmermann

@enduml
